--- a/index_full.html
+++ b/index_full.html
@@ -538,7 +538,7 @@ background-color: rgba(0,0,0,0.2);
         </div>
     </drop-zone>
 
-    <parsed-data 
+    <parsed-data  id="parser"
         selected_files="[[selected_files]]"
         use_n_leds="[[options.use_n_leds]]"
         speed_filter_mps="[[options.speed_filter_mps]]"
