--- a/rm-plots.html
+++ b/rm-plots.html
@@ -811,28 +811,38 @@ var draw_points = function(xy, w, h, scale, im, color, k){
 }
 
 var draw_lines = function(xy, w, h, scale, im, color){
+    // Chrome currently de-optizes for "compound let assignment"
+    // which means using += or -= on a variable declared with "let"
+    // so we have to manually write x = x + something
+    
     color = color || 0xff000000; //black
     im = im || new Uint32Array(w*h);
 
     let x0 = (xy[0] * scale) | 0;
     let y0 = (xy[1] * scale) | 0;
-    for(let ii=2; ii<xy.length; ii+=2){
+    for(let ii=2; ii<xy.length; ii=ii+2){
         let x1 = (xy[ii+0] * scale) | 0;
         let y1 = (xy[ii+1] * scale) | 0;
 
         // Bresenham algorithm adapted from http://stackoverflow.com/a/4672319/2399799
-        let dx = Math.abs(x1-x0);
-        let dy = Math.abs(y1-y0);
-        let sx = (x0 < x1) ? 1 : -1;
-        let sy = (y0 < y1) ? 1 : -1;
+        let sx = ((x0 < x1) <<1) -1; // (x0 < x1) ? 1 : -1
+        let sy = ((y0 < y1) <<1) -1; // (y0 < y1) ? 1 : -1
+        let dx = sx*(x1-x0); // abs(x0-x1)
+        let dy = sy*(y1-y0); // abs(y0-y1)
         let err = dx-dy;
         while(true){
             im[y0*w + x0] = color;
 
-            if ((x0==x1) && (y0==y1)) break;
+            if ((x0===x1) && (y0===y1)) break;
             let e2 = err << 1;
-            if (e2 >-dy){ err -= dy; x0  += sx; }
-            if (e2 < dx){ err += dx; y0  += sy; }
+            if (e2 >-dy){ 
+                err = err - dy;
+                x0  = x0 + sx; 
+            }
+            if (e2 < dx){
+                err = err + dx;
+                y0  = y0 + sy;
+            }
         }
 
         x0 = x1;
