--- a/patch-polymer.html
+++ b/patch-polymer.html
@@ -45,17 +45,54 @@ Polymer.Collection.prototype.initMap = function() {
 }
 
 
+Polymer.Base._addFeature({
+  /*
+    This is an important hack which allows you to avoid doing expensive
+    notifications if you really have to.
 
-/* Optimize bad perf func, this was getting deopt'ed by Chrome.
-   For some reason this doesn't monkey-patch all uses.
-*/
-/*
-Polymer.Bind._modelApi._clearPath = function (path) {
-  let keys = Object.keys(this.__data__);
-  path = path + ".";
-  for(let key of keys){
-    (key.substring(0, path.length) === path) && (this.__data__[key] = undefined);
+    It is to be used when an object has various properties that will be
+    rendered by only a single element.  The element registers itself as
+    the primary view for the given object using
+
+      this.setAsPrimaryViewForModel('special_object');
+
+    where 'special_object' is the name of a property on the element.
+    (I think this may support paths as well as raw property names, but
+    I haven't tested it.)
+
+    Then, in some other script we replace the following:
+
+      this.notifyPath('some_array.#42.some_property', mutated_object.some_property)      
+
+    with this:
+
+       this.notifyPathForPrimaryView('some_property', mutated_object.some_property, mutated_object);
+
+    Note how here we only use the final suffix for the path, and we provide the actual
+    object as the final argument.
+    (Again, I think you can use multi-part paths as the first argument, not just single property 
+    names but I haven't tested it.)
+
+    Using this approach very much goes against the Polymeric way of doing things, 
+    but it's far easier to implement than something less hacky (I did try something
+    much fancier, but ran in to all kinds of complciations and decided to abandon the effort.)
+  */
+
+  _primaryViews: new WeakMap(),
+
+  setAsPrimaryViewForModel: function(model_name){
+    let model = this.get(model_name);
+    this._primaryViews.set(model, {
+      el: this,
+      prefix: model_name
+    });
+  },
+
+  notifyPathForPrimaryView: function(path, value, model){
+    let view = this._primaryViews.get(model);
+    view && view.el.notifyPath(view.prefix + "." + path, value, true);
   }
-}
-*/
+
+});
+
 </script>
