previous +1, now as behavior

--- a/index_full.html
+++ b/index_full.html
@@ -18,6 +18,7 @@ window.Polymer = {dom: 'shadow'}; // this tells Polymer to use fast native dom
 </script>
 
 <link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="patch-polymer.html">
 <link rel="import" href="bower_components/iron-localstorage/iron-localstorage.html">
 <link rel="import" href="bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
