--- a/index.html
+++ b/index.html
@@ -7808,7 +7808,192 @@ this._insertChildren();
 this.fire('dom-change');
 }
 });</script>
+<script>
+"use strict";
 
+/*
+ Overwrite the Collection.add and .initMap methods.
+
+ Here we provide the option of using "intrusive" keys
+ for objects..although it's not fully intrusive, because
+ the non-intrusive version still exists and is used by 
+ the Collection class itself.
+ 
+ Objects with a ._pkey=null property will have it set to the
+ key when inserted into the collection, and when the 
+ collection is initialized.
+
+ Note that if the object is in multiple collections only the
+ first insertion will set the pkey, because after that the
+ value will no longer be null.  It is up to the user to be
+ aware of this and use it appropriately.
+
+*/
+Polymer.Collection.prototype.add = function(item) {
+  var key = this.store.push(item) - 1;
+  if (item && typeof item == 'object') {
+    this.omap.set(item, key);
+    item._pkey === null && (item._pkey = '#' + key); // << this is extra
+  } else {
+    this.pmap[item] = key;
+  }
+  return '#' + key;
+};
+
+Polymer.Collection.prototype.initMap = function() {
+  var omap = this.omap = new WeakMap();
+  var pmap = this.pmap = {};
+  var s = this.store;
+  for (var i=0; i<s.length; i++) {
+    var item = s[i];
+    if (item && typeof item == 'object') {
+      omap.set(item, i);
+      item._pkey === null && (item._pkey = '#' + i); // << this is extra
+    } else {
+      pmap[item] = i;
+    }
+  }
+};
+
+
+/*
+  The following is an important hack which allows you to avoid doing expensive
+  notifications if you really have to.
+
+  It is to be used when an object has various properties that are known to only 
+  be of interest to a very specific set of elements. 
+
+  The "target" elements should use the Polymer.ShortcutNotifyTargetBehavior(), 
+  behavior factory function, passing in an array of path strings.
+
+  For example:
+
+    <dom-module id="lovely-view">
+      <template>
+        some_property is: [[my_model.some_property]]
+      </template>
+      <script>
+        Polymer({
+          is: 'lovely-view',
+          behaviors: [
+            Polymer.ShortcutNotifyTargetBehavior(['my_model'])
+          ],
+          properties: {
+             my_model: {
+                // whatever
+             }
+          }
+        });
+      < /script>
+    </dom-module>
+
+  The "notifiyer" element should use the Polymer.ShortcutNotifyerBehavior,
+  and then replace calls like this:
+
+    this.notifyPath('some_array.#42.some_property', mutated_object.some_property)      
+
+  with this:
+
+     this.shortcutNotify('some_property', mutated_object.some_property, mutated_object);
+
+  Note how here we only use the final suffix for the path, and we provide the actual
+  object as the final argument.
+
+  I think this mechanism supports multi-part paths, but I haven't tested it.
+
+  Using this approach very much goes against the Polymeric way of doing things, 
+  but it's far easier to implement than something less hacky (I did try something
+  much fancier, but ran in to all kinds of complciations and decided to abandon the effort.)
+*/
+
+(function(){
+
+  let targetsForModel = new WeakMap();
+  let OLD_MODEL_PREFIX = '_oldModelFor_';
+
+  Polymer.ShortcutNotifyTargetBehavior = function(paths) {
+    return {
+
+      observers: (function(){
+        let observers = [];
+        for(let [ii, path] of paths.entries()){
+          observers.push('_updateShorcutMapping("' + path + '", ' + path + ')');
+        }
+        return observers;
+      })(),
+
+      _updateShorcutMapping: function(path, newModel){
+          this._removeAsTargetForModel(path);
+          this._addAsTargetForModel(path, newModel);
+          console.dir(targetsForModel);
+      },
+
+      attached: function(){
+        this._isAttached = true;
+        for(let path of paths){
+          this._addAsTargetForModel(path, this.get(path));
+        }
+      },
+
+      detached: function(){
+        this._isAttached = false;
+        for(let path of paths){
+          this._removeAsTargetForModel(path);
+        }
+      },
+
+      _removeAsTargetForModel: function(path){
+        let oldModel = this[OLD_MODEL_PREFIX + path];
+        let oldTargets;
+        if(oldModel && (typeof oldModel === "object") && (oldTargets=targetsForModel.get(oldModel))){
+          let oldIdx = -1;
+          for(let [ii, target] of oldTargets.entries()){
+            if(target.el === this){
+              oldIdx = ii;
+              break;
+            }
+          }
+          if(oldIdx !== -1){
+            if(oldTargets.length === 1){
+              targetsForModel.delete(oldModel); // this was the only remaining target for the given model
+            } else {
+              oldTargets.splice(oldIdx, 1); // there are still other targets observing this model
+            }
+          }
+        }
+      },
+
+      _addAsTargetForModel: function(path, newModel){
+        if(this._isAttached && newModel && (typeof newModel === "object")){
+          let newTargets = targetsForModel.get(newModel);
+          if(!newTargets){
+            newTargets = [];
+            targetsForModel.set(newModel, newTargets);
+          }
+          newTargets.push({
+            el: this,
+            prefix: path
+          });
+          this[OLD_MODEL_PREFIX + path] = newModel;
+        }
+      }
+
+    }
+  };
+
+  Polymer.ShortcutNotifyerBehavior = {
+      shortcutNotify: function(path, value, model){
+        let targets = targetsForModel.get(model) || [];
+        for(let target of targets){
+          target.el.notifyPath(target.prefix + "." + path, value, true);
+        }
+      }
+  };
+
+})();
+
+
+</script>
 <dom-module id="iron-localstorage" assetpath="bower_components/iron-localstorage/"></dom-module>
 <script>
 
@@ -16588,7 +16773,8 @@ pointer-events: none;
     Polymer({
         is:'tile-element',
         behaviors: [
-            Polymer.NeonAnimationRunnerBehavior
+            Polymer.NeonAnimationRunnerBehavior, 
+            Polymer.ShortcutNotifyTargetBehavior(['group_model'])
         ], properties: {
             group_num: {
                 type: Number,
@@ -16600,8 +16786,7 @@ pointer-events: none;
                 type: Object,
                 notify: true,
                 value: function(){return {};},
-                notify: true,
-                observer: '_register_primary_view'
+                notify: true
             },
             moving: {
                 type: Boolean,
@@ -16732,112 +16917,12 @@ pointer-events: none;
                 y: e.detail.offset_y,
                 w: e.detail.canvas_width
             });
-        }, _register_primary_view: function(okey){
-            okey && this.setAsPrimaryViewForModel('group_model');
         }
     });
 </script>
 
   
 </dom-module><script>
-
-/*
- Overwrite the Collection.add and .initMap methods.
-
- Here we provide the option of using "intrusive" keys
- for objects..although it's not fully intrusive, because
- the non-intrusive version still exists and is used by 
- the Collection class itself.
- 
- Objects with a ._pkey=null property will have it set to the
- key when inserted into the collection, and when the 
- collection is initialized.
-
- Note that if the object is in multiple collections only the
- first insertion will set the pkey, because after that the
- value will no longer be null.  It is up to the user to be
- aware of this and use it appropriately.
-
-*/
-Polymer.Collection.prototype.add = function(item) {
-  var key = this.store.push(item) - 1;
-  if (item && typeof item == 'object') {
-    this.omap.set(item, key);
-    item._pkey === null && (item._pkey = '#' + key); // << this is extra
-  } else {
-    this.pmap[item] = key;
-  }
-  return '#' + key;
-}
-
-Polymer.Collection.prototype.initMap = function() {
-  var omap = this.omap = new WeakMap();
-  var pmap = this.pmap = {};
-  var s = this.store;
-  for (var i=0; i<s.length; i++) {
-    var item = s[i];
-    if (item && typeof item == 'object') {
-      omap.set(item, i);
-      item._pkey === null && (item._pkey = '#' + i); // << this is extra
-    } else {
-      pmap[item] = i;
-    }
-  }
-}
-
-
-Polymer.Base._addFeature({
-  /*
-    This is an important hack which allows you to avoid doing expensive
-    notifications if you really have to.
-
-    It is to be used when an object has various properties that will be
-    rendered by only a single element.  The element registers itself as
-    the primary view for the given object using
-
-      this.setAsPrimaryViewForModel('special_object');
-
-    where 'special_object' is the name of a property on the element.
-    (I think this may support paths as well as raw property names, but
-    I haven't tested it.)
-
-    Then, in some other script we replace the following:
-
-      this.notifyPath('some_array.#42.some_property', mutated_object.some_property)      
-
-    with this:
-
-       this.notifyPathForPrimaryView('some_property', mutated_object.some_property, mutated_object);
-
-    Note how here we only use the final suffix for the path, and we provide the actual
-    object as the final argument.
-    (Again, I think you can use multi-part paths as the first argument, not just single property 
-    names but I haven't tested it.)
-
-    Using this approach very much goes against the Polymeric way of doing things, 
-    but it's far easier to implement than something less hacky (I did try something
-    much fancier, but ran in to all kinds of complciations and decided to abandon the effort.)
-  */
-
-  _primaryViews: new WeakMap(),
-  _pendingNotifies: new WeakMap(),
-
-  setAsPrimaryViewForModel: function(model_name){
-    let model = this.get(model_name);
-    this._primaryViews.set(model, {
-      el: this,
-      prefix: model_name
-    });
-  },
-
-  notifyPathForPrimaryView: function(path, value, model){
-    let view = this._primaryViews.get(model);
-    view && view.el.notifyPath(view.prefix + "." + path, value, true);
-  }
-
-});
-
-</script><script>
 
 var Utils = {}
 
@@ -24203,7 +24288,9 @@ var use_mask = function(vector, mask, val){
 
     Polymer({
         is:'rm-plots',
-        properties: {
+        behaviors: [
+            Polymer.ShortcutNotifyerBehavior
+        ], properties: {
             pos_path: {
                 type: String, //canvas-manager id
                 value: "",
@@ -24220,7 +24307,7 @@ var use_mask = function(vector, mask, val){
                 value: function(){ return {};},
                 notify: true
             },
-        pos_speed: {
+            pos_speed: {
                 type: Object, // array akey "data" and timebase Number in same units as max_delta_t
                 value: function(){ return {};},
                 notify: true
@@ -24386,7 +24473,7 @@ var use_mask = function(vector, mask, val){
                     rm.speed = op === 1 ? okey._rm_speed_other : null;
                 }
 
-                this.notifyPathForPrimaryView('rm', rm, okey); // actual path: 'groups.' + okey._pkey + '.rm'
+                this.shortcutNotify('rm', rm, okey); // actual path: 'groups.' + okey._pkey + '.rm'
             }
 
         }, _options_modified: function(){
@@ -24828,7 +24915,9 @@ var is_equal_simple = function(a, b){
 
     Polymer({
         is:'tac-plots',
-        properties: {
+        behaviors: [
+            Polymer.ShortcutNotifyerBehavior
+        ], properties: {
                max_delta_t: {
                 type: Number, // in miliseconds
                 value: 2,
@@ -24949,7 +25038,7 @@ var is_equal_simple = function(a, b){
 
                 if(op){
                     okey.tac = op === 1 ? okey._tac_other : null;
-                    this.notifyPathForPrimaryView('tac', okey.tac, okey); // actual path: 'groups.' + okey._pkey + '.tac'
+                    this.shortcutNotify('tac', okey.tac, okey); // actual path: 'groups.' + okey._pkey + '.tac'
                 }
             }
 
@@ -26801,6 +26890,9 @@ return WavesRenderer;
 
 Polymer({
     is:'wave-plots',
+    behaviors: [
+        Polymer.ShortcutNotifyerBehavior
+    ],
     properties: {
         palette_mode: {
             type: String,
@@ -26875,7 +26967,7 @@ Polymer({
 
             this._renderer.set_show('n');
             for(let okey of this.groups) if(okey && okey.waves){
-                this.set('groups.' + okey._pkey + '.waves', null);
+                this.set('groups.' + okey._pkey + '.waves', null); 
             }
         } else {
             this.set('show_chans', 'yyyy');
@@ -26910,7 +27002,7 @@ Polymer({
             }
             if(!okey.waves || okey.waves.canvas !== el_canvas){
                 okey.waves = cm.to_ckey(el_canvas);
-                this.notifyPathForPrimaryView('waves', okey.waves, okey); // actual path: 'groups.' + key + '.waves'
+                this.shortcutNotify('waves', okey.waves, okey); // actual path: 'groups.' + key + '.waves'
             } // else the current rendered canvas aparently has the desired options already, and the renderer just re-sent it to us
         }
     }, mask_at_vt: function(inds, point){
