--- a/patch-polymer.html
+++ b/patch-polymer.html
@@ -1,4 +1,5 @@
 <script>
+"use strict";
 
 /*
  Overwrite the Collection.add and .initMap methods.
@@ -27,7 +28,7 @@ Polymer.Collection.prototype.add = function(item) {
     this.pmap[item] = key;
   }
   return '#' + key;
-}
+};
 
 Polymer.Collection.prototype.initMap = function() {
   var omap = this.omap = new WeakMap();
@@ -42,57 +43,144 @@ Polymer.Collection.prototype.initMap = function() {
       pmap[item] = i;
     }
   }
-}
+};
 
 
-Polymer.Base._addFeature({
-  /*
-    This is an important hack which allows you to avoid doing expensive
-    notifications if you really have to.
+/*
+  The following is an important hack which allows you to avoid doing expensive
+  notifications if you really have to.
 
-    It is to be used when an object has various properties that will be
-    rendered by only a single element.  The element registers itself as
-    the primary view for the given object using
+  It is to be used when an object has various properties that are known to only 
+  be of interest to a very specific set of elements. 
 
-      this.setAsPrimaryViewForModel('special_object');
+  The "target" elements should use the Polymer.ShortcutNotifyTargetBehavior(), 
+  behavior factory function, passing in an array of path strings.
 
-    where 'special_object' is the name of a property on the element.
-    (I think this may support paths as well as raw property names, but
-    I haven't tested it.)
+  For example:
 
-    Then, in some other script we replace the following:
+    <dom-module id="lovely-view">
+      <template>
+        some_property is: [[my_model.some_property]]
+      </template>
+      <script>
+        Polymer({
+          is: 'lovely-view',
+          behaviors: [
+            Polymer.ShortcutNotifyTargetBehavior(['my_model'])
+          ],
+          properties: {
+             my_model: {
+                // whatever
+             }
+          }
+        });
+      < /script>
+    </dom-module>
 
-      this.notifyPath('some_array.#42.some_property', mutated_object.some_property)      
+  The "notifiyer" element should use the Polymer.ShortcutNotifyerBehavior,
+  and then replace calls like this:
 
-    with this:
+    this.notifyPath('some_array.#42.some_property', mutated_object.some_property)      
 
-       this.notifyPathForPrimaryView('some_property', mutated_object.some_property, mutated_object);
+  with this:
 
-    Note how here we only use the final suffix for the path, and we provide the actual
-    object as the final argument.
-    (Again, I think you can use multi-part paths as the first argument, not just single property 
-    names but I haven't tested it.)
+     this.shortcutNotify('some_property', mutated_object.some_property, mutated_object);
 
-    Using this approach very much goes against the Polymeric way of doing things, 
-    but it's far easier to implement than something less hacky (I did try something
-    much fancier, but ran in to all kinds of complciations and decided to abandon the effort.)
-  */
+  Note how here we only use the final suffix for the path, and we provide the actual
+  object as the final argument.
 
-  _primaryViews: new WeakMap(),
+  I think this mechanism supports multi-part paths, but I haven't tested it.
 
-  setAsPrimaryViewForModel: function(model_name){
-    let model = this.get(model_name);
-    this._primaryViews.set(model, {
-      el: this,
-      prefix: model_name
-    });
-  },
+  Using this approach very much goes against the Polymeric way of doing things, 
+  but it's far easier to implement than something less hacky (I did try something
+  much fancier, but ran in to all kinds of complciations and decided to abandon the effort.)
+*/
 
-  notifyPathForPrimaryView: function(path, value, model){
-    let view = this._primaryViews.get(model);
-    view && view.el.notifyPath(view.prefix + "." + path, value, true);
-  }
+(function(){
 
-});
+  let targetsForModel = new WeakMap();
+  let OLD_MODEL_PREFIX = '_oldModelFor_';
+
+  Polymer.ShortcutNotifyTargetBehavior = function(paths) {
+    return {
+
+      observers: (function(){
+        let observers = [];
+        for(let [ii, path] of paths.entries()){
+          observers.push('_updateShorcutMapping("' + path + '", ' + path + ')');
+        }
+        return observers;
+      })(),
+
+      _updateShorcutMapping: function(path, newModel){
+          this._removeAsTargetForModel(path);
+          this._addAsTargetForModel(path, newModel);
+          console.dir(targetsForModel);
+      },
+
+      attached: function(){
+        this._isAttached = true;
+        for(let path of paths){
+          this._addAsTargetForModel(path, this.get(path));
+        }
+      },
+
+      detached: function(){
+        this._isAttached = false;
+        for(let path of paths){
+          this._removeAsTargetForModel(path);
+        }
+      },
+
+      _removeAsTargetForModel: function(path){
+        let oldModel = this[OLD_MODEL_PREFIX + path];
+        let oldTargets;
+        if(oldModel && (typeof oldModel === "object") && (oldTargets=targetsForModel.get(oldModel))){
+          let oldIdx = -1;
+          for(let [ii, target] of oldTargets.entries()){
+            if(target.el === this){
+              oldIdx = ii;
+              break;
+            }
+          }
+          if(oldIdx !== -1){
+            if(oldTargets.length === 1){
+              targetsForModel.delete(oldModel); // this was the only remaining target for the given model
+            } else {
+              oldTargets.splice(oldIdx, 1); // there are still other targets observing this model
+            }
+          }
+        }
+      },
+
+      _addAsTargetForModel: function(path, newModel){
+        if(this._isAttached && newModel && (typeof newModel === "object")){
+          let newTargets = targetsForModel.get(newModel);
+          if(!newTargets){
+            newTargets = [];
+            targetsForModel.set(newModel, newTargets);
+          }
+          newTargets.push({
+            el: this,
+            prefix: path
+          });
+          this[OLD_MODEL_PREFIX + path] = newModel;
+        }
+      }
+
+    }
+  };
+
+  Polymer.ShortcutNotifyerBehavior = {
+      shortcutNotify: function(path, value, model){
+        let targets = targetsForModel.get(model) || [];
+        for(let target of targets){
+          target.el.notifyPath(target.prefix + "." + path, value, true);
+        }
+      }
+  };
+
+})();
+
 
 </script>
